<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_user_profile"
        android:title="@string/user_profile"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_add_new_event"
        android:title="@string/new_event"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_show_past_event"
        android:title="@string/show_history"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />

</menu>