<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chermaine.a496finalhybridproject.MainActivity">

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:padding="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_username"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_alignLeft="@id/input_password"
        android:text="@string/show_password"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signup_button"/>

</RelativeLayout>
