<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/first_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/profile_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/first_name"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_below="@id/first_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/profile_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_first_name"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight ="30dp"
        android:padding="5dp"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/last_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_last_name"
        android:layout_toRightOf="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_username"
        android:layout_toRightOf="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:layout_below="@id/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_below="@id/update_profile_button"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/delete_user_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textColor="@color/red"
        />

</RelativeLayout>