<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/new_event_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_event"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/event_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_event_page"
                android:text="@string/event_name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/input_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_event_page"
                android:layout_toRightOf="@id/event_name"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:layout_below="@id/event_name"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/date_format"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/date_format"
                android:layout_below="@id/event_date"
                android:textSize="12dp"
                android:textStyle="italic"
                android:layout_marginLeft="30dp"
                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/input_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_event_name"
                android:layout_toRightOf="@id/event_date"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="date"
                />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:layout_below="@id/event_date"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/time_format"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/time_format"
                android:layout_below="@id/event_time"
                android:textSize="12dp"
                android:textStyle="italic"
                android:layout_marginLeft="30dp"
                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/input_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_event_date"
                android:layout_toRightOf="@id/event_time"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="time"
                />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:layout_below="@id/event_time"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/input_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_event_time"
                android:layout_toRightOf="@id/event_description"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <CheckBox
                android:id="@+id/input_event_all_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_event_description"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/event_all_day"
                android:layout_marginTop="15dp"
                />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_event_all_day"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/submit_button"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>