<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/new_user_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_page"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_user_signup"
                android:text="@string/first_name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_user_signup"
                android:layout_toRightOf="@id/first_name"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_below="@id/first_name"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_first_name"
                android:layout_toRightOf="@id/last_name"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/last_name"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_last_name"
                android:layout_toRightOf="@id/username"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@id/username"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_username"
                android:layout_toRightOf="@id/email"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/password"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_below="@id/email"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_email"
                android:layout_toRightOf="@id/password"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_password"
                android:layout_alignLeft="@id/input_password"
                android:text="@string/show_password"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/submit"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>