<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/update_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_event_page"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="20dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/event_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_below="@id/update_event"
                />

            <EditText
                android:id="@+id/update_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_event"
                android:layout_toRightOf="@id/event_name"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:layout_below="@id/event_name"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/update_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_event_name"
                android:layout_toRightOf="@id/event_date"
                android:layout_marginTop="20dp"
                android:layout_marginRight ="30dp"
                android:padding="5dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:layout_below="@id/event_date"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/update_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_event_date"
                android:layout_toRightOf="@id/event_time"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:layout_below="@id/event_time"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/update_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_event_time"
                android:layout_toRightOf="@id/event_description"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:textSize="20dp"
                />

            <CheckBox
                android:id="@+id/update_all_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_all_day"
                android:layout_below="@id/event_description"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/update_event_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_below="@id/event_description"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/update_event_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_event_submit_button"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/cancel"
                android:textColor="@color/red"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>