<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/hi"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comma"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/first_name"
        />

    <TextView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_list"
        android:layout_below="@id/first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        />

    <Button
        android:id="@+id/not_you_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@null"
        android:textSize="15dp"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/event_list"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/not_you_button"
        android:layout_marginBottom="10dp"
        >
    </ListView>
</RelativeLayout>